wubi (10.10) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Bump to 10.10.
  * GRUB no longer has a 'sh' module; use 'normal' instead.
  * Pass '-O i386-pc' to grub-mkimage, required by GRUB snapshots from
    2010-05-17 onwards.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 30 Jun 2010 11:44:43 +0100

wubi (10.04) UNRELEASED; urgency=low

  [ Agostino Russo ]
  * Fixed country and keymap detection (LP: #428575)
  * Added Chinese to language selector (LP: #468457)
  * The amd64 URL for Kubuntu was pointing to the i386 ISO (LP: #465936)
  * Boot.ini is not restored if drive letter is in upper case (LP:
    #400936)
  * Added traditional chinese to language list (LP: #468457)
  * Default to English if translations are not available (LP: #469131)
  * Better embedded grub.cfg, previous version was a workaround for a 
    grub2 bug that didn't allow us to test for the existance of a 
    file. That grub bug (rev 1724) has now been fixed.  
  * Bumped preseed suite to lucid
  * Avoid error due to null cd_path (LP: #552357)
  * Fixed CD menu reboot (LP: #543032)
  * Safe graphic mode boot option was disabled (LP: #550539)

  [ Colin Watson ]
  * Handle separate /boot in embedded grub.cfg (idea from Mark Abene in LP
    #477169).
  * Fall back to searching for /ubuntu/install/boot/grub/grub.cfg even if
    /ubuntu/disks/root.disk exists but is unusable (LP: #541607).
  * Skip " LTS" in .disk/info when comparing versions (see LP #558488).
  * Build-depend on gcc-multilib on amd64, so that 'gcc -m32' works.

  [ Evan Dandrea ]
  * Bump to 10.04
  * Ubuntu Netbook Remix is now the Ubuntu Netbook Edition (LP: #541881).
  * Update translations from Launchpad.
  * Updated Ubuntu branding.  Thanks Michael Forrest!
  * str.replace() does not do in place modification of the string
    (LP: #567969).

 -- Agostino Russo <agostino.russo@gmail.com>  Wed, 07 Apr 2010 23:42:08 +0100

wubi (9.10) karmic; urgency=low

  [ Agostino Russo ]
  * Upped references to 9.10/karmic