@@ -73,11 +73,12 @@ cpuid: src/cpuid/cpuid.c
 
 winboot2: grubutil
 	mkdir -p build/winboot
-	cp -f data/wubildr.cfg build/winboot/wubildr.cfg
+	cp -f data/wubildr.cfg data/wubildr-bootstrap.cfg build/winboot/
 	./build/grubutil/grubinst/grubinst --grub2 --boot-file=wubildr -o build/winboot/wubildr.mbr
-	grub-mkimage -O i386-pc -c build/winboot/wubildr.cfg -o build/grubutil/core.img \
+	cd build/winboot && tar cf wubildr.tar wubildr.cfg
+	grub-mkimage -O i386-pc -c build/winboot/wubildr-bootstrap.cfg -m build/winboot/wubildr.tar -o build/grubutil/core.img \
 		loadenv biosdisk part_msdos part_gpt fat ntfs ext2 ntfscomp iso9660 loopback search linux boot minicmd cat cpuid chain halt help ls reboot \
-		echo test configfile normal sleep
+		echo test configfile normal sleep memdisk tar
 	cat /usr/lib/grub/i386-pc/lnxboot.img build/grubutil/core.img > build/winboot/wubildr
 
 winboot: grub4dos grubutil
