@@ -5,6 +5,10 @@ wubi (10.10) UNRELEASED; urgency=low
   * GRUB no longer has a 'sh' module; use 'normal' instead.
   * Pass '-O i386-pc' to grub-mkimage, required by GRUB snapshots from
     2010-05-17 onwards.
+  * wubildr.cfg needs to be run using GRUB's normal parser rather than its
+    rescue parser.  Rather than embedding it directly as a configuration
+    file, embed it as a memdisk and add wubildr-bootstrap.cfg which invokes
+    it using normal mode (LP: #600578).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Wed, 30 Jun 2010 11:44:43 +0100
 
